--- a/src/Recipe.css
+++ b/src/Recipe.css
@@ -1,8 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap');
+
 .RecImg
 {
     height: 100vh;
-    width: 40vh;
-    background-image: url("./image/rec1_1.jpg");
+    width: 33vw;
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+    position: absolute;
+}
+.Container
+{
+    margin-left: 44%;
+}
+.nameBox
+{
+    padding-top: 170px;
+    width: fit-content;
+}
+.NameText
+{
+    font: normal normal 600 40px Montserrat;
+    width: fit-content;
+}
+.underText{
+    height: 4px;
+    width: 75%;
+    background-color: black;
+    margin-top: 7px;
+}
+.TextBox
+{
+    margin-top: 40px;
+    font: normal normal 500 15px Montserrat;
+    color: #4b4b4b;
+    width: 65%;
 }
